# knik

./: .env.example  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  LINTER_SETUP.md  README.md  WORKFLOW_TOOLS_IMPLEMENTATION.md  diff.txt  electron-builder.yml  electron-main.js  electron-preload.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh  test_filter.py
.agent/workflows/: plan-mode.md  read-instructions.md
.github/: copilot-instructions.md
.github/copilot/: ANIMATION_IMPLEMENTATION.md  QUICK_START.md  SESSION_SUMMARY.md
.github/workflows/: ci.yml
.husky/: pre-commit
.opencode/plans/: token-tracking.md  (+2 more)
assets/: README.md
contribution-guidelines/: architecture.md  commit-format.md  conventions.md  development.md  file-navigation.md  patterns.md
db/: init.py
demo/: README.md  test_ai_history_integration.py  test_conversation_history.py
docs/: API.md  CONSOLE.md  CONSOLE_APP_IMPLEMENTATION.md  CONVERSATION_HISTORY.md  DEPLOYMENT.md  ELECTRON.md  ENVIRONMENT_VARIABLES.md  FRONTEND_POLISH.md  GUI.md  LINTING.md  MCP.md  MCP_LANGCHAIN_PATTERN.md  PATH_ALIASES.md  README.md  ROADMAP.md  SCHEDULER.md  SETUP.md  STREAMING.md  STREAMING_IMPLEMENTATION.md  WEB_APP.md  WEB_MIGRATION.md  design.md
scripts/: format_backend.sh  format_frontend.sh  lint_backend.sh  lint_frontend.sh  migrate.sh  start_console_dual.sh  start_console_split.sh  start_electron.sh  start_web_backend.sh  start_web_frontend.sh  typecheck_backend.sh
src/: imports.py  main.py
tests/: __init__.py
(+726 files in other folders)
